[gd_scene load_steps=5 format=2]

[ext_resource path="res://Panels/Tavern.gd" type="Script" id=1]
[ext_resource path="res://Panels/Icons/tavern.png" type="Texture" id=2]

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 32, 32 )
margin_left = 8.0
margin_right = 8.0
margin_top = 8.0
margin_bottom = 8.0

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 32, 32 )
margin_left = 8.0
margin_right = 8.0
margin_top = 8.0
margin_bottom = 8.0
expand_margin_bottom = 8.0
axis_stretch_horizontal = 2
axis_stretch_vertical = 1

[node name="TavernUI" type="VBoxContainer"]
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatPanel" type="PanelContainer" parent="."]
margin_right = 16.0
margin_bottom = 16.0
custom_styles/panel = SubResource( 2 )

[node name="TavernStats" type="HBoxContainer" parent="StatPanel"]
margin_left = 8.0
margin_top = 8.0
margin_right = 8.0
margin_bottom = 8.0
size_flags_horizontal = 3
custom_constants/separation = 8
alignment = 1

[node name="Timer" type="Timer" parent="."]

[node name="TavernPanel" type="PanelContainer" parent="."]
margin_top = 20.0
margin_right = 16.0
margin_bottom = 36.0
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="ShopPanel" type="VBoxContainer" parent="TavernPanel"]
margin_left = 8.0
margin_top = 8.0
margin_right = 8.0
margin_bottom = 8.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 8

[node name="BankruptPanel" type="PanelContainer" parent="TavernPanel"]
visible = false
margin_right = 24.0
margin_bottom = 10.0
rect_min_size = Vector2( 10, 10 )
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 10.0

[node name="Label" type="Label" parent="TavernPanel/BankruptPanel"]
margin_right = 40.0
margin_bottom = 14.0
text = "BANKRUPT"
__meta__ = {
"_edit_use_anchors_": false
}
